--- a/students/k3341/laboratory_works/Moskalets_Danila/lab_reports/mkdocs.yml
+++ b/students/k3341/laboratory_works/Moskalets_Danila/lab_reports/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: ITMO ICT WebDevelopment 2025-2026
 nav:
   - Главная: index.md
   - Лабораторная 1: lr1.md
+  - Лабораторная 2: lr2.md
 theme:
   name: material
   language: ru
