add docs for practical work lab3

--- a/students/k3341/laboratory_works/Moskalets_Danila/lab_reports/mkdocs.yml
+++ b/students/k3341/laboratory_works/Moskalets_Danila/lab_reports/mkdocs.yml
@@ -3,6 +3,9 @@ nav:
   - Главная: index.md
   - Лабораторная 1: lr1.md
   - Лабораторная 2: lr2.md
+  - Лабораторная 3:
+      - Практическая работа: pr3.md
+      - Лабораторная работа: lr3.md
 theme:
   name: material
   language: ru
